# glfw_hello

./: CMakeLists.txt  README.md  build.py
src/: main.c
